Create easy custom flash

--- a/app/views/spreadsheets/index.html.slim
+++ b/app/views/spreadsheets/index.html.slim
@@ -1,2 +1,4 @@
+.hint style="opacity: 0;"
+  | Обновлено
 .main
   = render partial: 'form', :locals => {:spreadsheet => Spreadsheet.all.first || Spreadsheet.new}
